Final version of working datawrapper dashboard, plus script for data prep and chart factory.

--- a/index.qmd
+++ b/index.qmd
@@ -15,242 +15,32 @@ execute:
   warning: false
 ---
 
-```{r}
+```{r setup}
 #| context: setup
-# Libraries, fonts themes
-knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, dev = "svg")
-xfun::pkg_attach("tidyverse", "targets", "here", "scales", "qs", "zoo", "patchwork", "shiny", "shinyjs", "rlang", "ggrepel", "ggtext", "ggfittext", "kableExtra", "glue", "targets")
-
-dashpal <-  c("#771155", "#117777")
-rpal <- c("#771155", "#AA4488", "#CC99BB", 
-          "#114477", "#4477AA", "#77AADD", 
-          "#117777", "#44AAAA", "#77CCCC", 
-          "#117744", "#44AA77", "#88CCAA", 
-          "#777711", "#AAAA44", "#DDDD77", 
-          "#774411", "#AA7744", "#DDAA77", 
-          "#771122", "#AA4455", "#DD7788")
-
-dens_pal <- list(c(`Union member` = dashpal[2], `Not member` = "#DADDEF"),
-                      c(`Union member` = dashpal[1], `Not member` = "#DADDEF"))
-bar_pal <- list(
-  c(`yes` = dashpal[2], `no` = "#DADDEF"),  # private
-  c(`yes` = dashpal[1], `no` = "#DADDEF")  # public
-)
-
-theme_rr_dash <-
-  function(base_size = 14, legend = 'none') {
-    theme_minimal() %+replace%
-      theme(
-        text = element_text(size = 6),
-        axis.text.y = element_text(size = 16),
-        axis.text.x = element_text(size = 16),
-        axis.title = element_text(size = 14),
-        plot.title = element_text(
-          size = 20,
-          hjust = 0,
-          face = 'bold',
-          margin = margin(b = 6)
-        ),
-        plot.subtitle = element_text(
-          size = 18,
-          hjust = 0,
-          margin = margin(b = 10)
-        ),
-        plot.title.position = 'plot',
-        plot.caption = element_text(
-          size = 12,
-          face = 'italic',
-          hjust = 1,
-          margin = margin(t = 10)
-        ),
-        panel.grid.minor = element_blank(),
-        legend.position = legend,
-        strip.text = element_text(
-          size = 18,
-          face = "bold",
-          color = "#353935",
-          hjust = 0,
-          margin = margin(b = 5, unit = "mm")
-        )
-      )
-  }
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
+## Libraries, theme, colours
+source(here::here('R', 'dash_setup.R'))
+## Factor levels and selector order
+source(here::here('R', 'dash_levels.R')) 
 ```
 
-```{r}
+```{r data}
 #| context: data
 #| include: false
 
-# Data import and prep
 ## Density data
 dens_df <- tar_read(density_df) |> 
   mutate(p = ifelse(is.nan(p), NA, p))
 
 ## Distribution data
 pop_df <- tar_read(dist_df)
-
-# Dataframe full of default factor levels
-factor_levels <-
-  tribble(
-    ~ varlevel,
-    ~ variable,
-    
-    # Age groups
-    "65+","Age group",
-    "55 to 64","Age group",
-    "25 to 54","Age group",
-    "15 to 24","Age group",
-    
-    # CMA
-    "Calgary","CMA",
-    "Edmonton","CMA",
-    "Hamilton","CMA",
-    "Montréal","CMA",
-    "Ottawa–Gatineau","CMA",
-    "Québec","CMA",
-    "Toronto","CMA",
-    "Vancouver","CMA",
-    "Winnipeg","CMA",
-    "Other CMA/non-CMA","CMA",
-    
-    # Province
-    "Alberta","Province",
-    "British Columbia","Province",
-    "Manitoba","Province",
-    "New Brunswick","Province",
-    "Newfoundland","Province",
-    "Nova Scotia","Province",
-    "Ontario","Province",
-    "PEI","Province",
-    "Quebec","Province",
-    "Saskatchewan","Province",
-    
-    # Education
-    "Graduate","Education level",
-    "Undergraduate","Education level",
-    "College","Education level",
-    "Secondary/Some PSE","Education level",
-    "Under secondary","Education level",
-    
-    # Student status
-    "Part-time student","Student status",
-    "Full-time student","Student status",
-    "Non-student","Student status",
-    
-    # Family type
-    "Other families","Family type",
-    "Lone-parent","Family type",
-    "Not in econ family","Family type",
-    "Single-earner","Family type",
-    "Dual-earner","Family type",
-    
-    # Gender
-    "Men","Gender",
-    "Women","Gender",
-    
-    # Immigration
-    "Immigrant < 10 years","Immigration",
-    "Immigrant > 10 years","Immigration",
-    "Non-immigrant","Immigration",
-    
-    # Employment
-    "Standard employment","Employment status",
-    "Non-standard employment","Employment status",
-    "Full-time","Employment status",
-    "Part-time","Employment status",
-    "Multiple jobholder","Employment status",
-    "Single jobholder","Employment status",
-    "Permanent","Employment status",
-    "Temporary, casual","Employment status",
-    "Temporary, seasonal","Employment status",
-    "Temporary, term/contract","Employment status",
-    
-    # Job tenure
-    "10 years or more","Job tenure",
-    "5 to under 10","Job tenure",
-    "1 to under 5","Job tenure",
-    "Under 1 year","Job tenure",
-    
-    # Industry
-    "Accomodation/Food","Industry",
-    "Agriculture","Industry",
-    "Business/Building/Other services","Industry",
-    "Construction","Industry",
-    "Education","Industry",
-    "Finance/Insurance","Industry",
-    "Fishing/Hunting/Trapping","Industry",
-    "Forestry/Support activities","Industry",
-    "Health care/Social assistance","Industry",
-    "Information/Culture/Recreation","Industry",
-    "Manufacturing, durable","Industry",
-    "Manufacturing, non-durable","Industry",
-    "Mining/Quarrying/Oil and gas","Industry",
-    "Other services","Industry",
-    "Professional/Scientific/Technical","Industry",
-    "Public administration","Industry",
-    "Real estate/Rental/Leasing","Industry",
-    "Retail trade","Industry",
-    "Transportation/Warehousing","Industry",
-    "Utilities","Industry",
-    "Wholesale trade","Industry",
-    
-    # Firm size
-    "More than 500 employees", "Firm size",
-    "100 to 500 employees","Firm size",
-    "20 to 99 employees","Firm size",
-    "Less than 20 employees","Firm size",
-    
-    # Est size
-    "More than 500 employees","Establishment size",
-    "100 to 500 employees","Establishment size",
-    "20 to 99 employees","Establishment size",
-    "Less than 20 employees","Establishment size",
-    
-    # Occupation
-    "Business/Finance/Admin","Occupation",
-    "Health","Occupation",
-    "Management","Occupation",
-    "Natural/Applied sciences","Occupation",
-    "Natural resources/Agriculture/Related","Occupation",
-    "Art/Culture/Recreation/Sport","Occupation",
-    "Education/Law/SCG services","Occupation",
-    "Manufacturing/Utilities","Occupation",
-    "Sales/Service","Occupation",
-    "Trades/Transport/Equip operators","Occupation",
-
-    # Youngest child
-    "18-24 years","Youngest child",
-    "13-17 years","Youngest child",
-    "6-12 years","Youngest child",
-    "Under 6 years","Youngest child",
-    "No children","Youngest child"
-)
-
-# Pull main variables for selector list
-dash_vars <- dens_df |> distinct(variable) |> pull() |> as.character()
-
-# Set selector list order
-dash_vars_order <- c(
-  "Province",
-  "CMA",
-  "Age group",
-  "Gender",
-  "Family type",
-  "Youngest child",
-  "Education level",
-  "Student status",
-  "Immigration",
-  "Occupation",
-  "Industry",
-  "Establishment size",
-  "Firm size",
-  "Employment status",
-  "Job tenure")
+dash_vars <- dens_df |> dplyr::distinct(variable) |> pull() |> as.character()
 dash_vars <- dash_vars[order(match(dash_vars, dash_vars_order))]
 ```
 
 #  {.toolbar}
 
-```{r}
+```{r inputs}
 useShinyjs(rmd = TRUE)
 selectInput("variable", label = "Select variable", choices = dash_vars, selectize = FALSE)
 selectInput("gg_layout", label = 'Layout', choices = c("Vertical", "Horizontal", "Stacked"), selectize = FALSE)
@@ -469,9 +259,9 @@ Another reason is that public sector jobs cannot be off-shored in the same way p
 
 ## Content
 
-```{r}
-#| fill: false
-#| flow: true
+```{r chart_ui}
+#| fill: true
+#| flow: false
 #| fig-dpi: 300
 plotOutput('plot', height = "100%", width = "auto")
 ```
@@ -480,7 +270,7 @@ plotOutput('plot', height = "100%", width = "auto")
 
 ## Content
 
-```{r}
+```{r table_ui}
 #| fill: false
 #| flow: false
 htmlOutput('table_title')
@@ -509,13 +299,13 @@ Distribution
 
 -   p_members = % members that belong to varlevel (Proportion)
 
-```{r}
+```{r dl_button}
 downloadButton("data", "Download")
 ```
 
 ## Content {title = "Data preview"}
 
-```{r}
+```{r dl_preview}
 tableOutput('data_preview')
 ```
 
@@ -1197,6 +987,7 @@ df |>
 ```{r server_output}
 #| context: server
 ##### OUTPUT
+
 # Render charts
 output$plot <- renderPlot({
   # Density charts
